Landing page: reduce tab-width to prevent wrapping
The tabs on the "help by project" card were wrapping on
iPhone, so reducing the padding to prevent this.

--- a/_scss/_landing.scss
+++ b/_scss/_landing.scss
@@ -308,6 +308,8 @@ body#landing {
 
       li a {
         cursor: pointer;
+        padding: 10px 3px;
+        @include sm-width { padding: 10px 15px; }
       }
 
       li.active a {
